[package]
name = "add_google_calender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
google-authz = "0.0.2"
google-calendar = "0.4.1"
google-calendar3 = "5.0.2"
hyper = "0.14.25"
yup-oauth2 = "8.1.0"
